Fix z-index problem

--- a/cryptostockz-front/src/components/App/App.css
+++ b/cryptostockz-front/src/components/App/App.css
@@ -8,7 +8,8 @@
 
 body{
   font-family: 'Baloo Tamma 2', cursive !important;
-  background: var(--mainWhite) !important;
+  /*background: var(--mainWhite) !important;*/
+  background: var(--teal) !important;
   color: var(--mainDark) !important;
 }
 
